<resources>
    <string name="app_name">BroCast</string>
    <string name="brocast_welcome">Heey</string>
    <string name="brocast_main">"This is BroCast! \n Welcome :) \n Please select a bro from your bro list and brocast that bro!"</string>
    <string name="password_hint">Password</string>
    <string name="broname_hint">Bro name</string>
    <string name="brocast_register">"Register!"</string>
    <string name="brocast_login">"Login!"</string>
    <string name="bro_login">"Login Bro!"</string>
    <string name="bro_register">"Register Bro!"</string>
    <string name="brocast_forgot_pass">"Forgot pass Bro?</string>
    <string name="brocast_logout">"Logout"</string>
    <string name="brocast_find_bros">Find Bro\'s!</string>
    <string name="brocast_phone_number">Phone number</string>
    <string name="preference_file_key">com.bro.brocast.brocast_file_key</string>
    <string name="bro_name">Bro\'s name</string>
    <string name="bro_id">Bro\'s id</string>
    <string name="add_bro">Add bro</string>
    <string name="bro_message">Type a message</string>
    <string name="send">send</string>
    <string name="channel_id">com.bro.brocast.BroCast</string>
    <string name="channel_name">BroCast</string>
    <string name="broname_emotion">😊</string>
    <string name="bro_register_text">Please give your bro name with a bromotion to register</string>
    <string name="brocast_search">Search for your Bro using their Bro name \nor use a Bro name/bromotion combination</string>
    <string name="bro_message_count">0</string>
    <string name="keyboard_exlamation_mark">!</string>
    <string name="keyboard_question_mark">\?</string>
    <string name="keyboard_backspace">backspace</string>
</resources>
