<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <EditText
        android:id="@+id/broNameRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="TODO"
        android:hint="@string/broname_hint"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/passwordRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="150dp"
        android:layout_marginEnd="150dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp" />

    <EditText
        android:id="@+id/broNameRegisterEmotion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="TODO"
        android:hint="@string/broname_emotion"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/broNameRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/broNameRegister"
        app:layout_constraintTop_toTopOf="@+id/broNameRegister" />

    <EditText
        android:id="@+id/passwordRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:autofillHints="TODO"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRegisterBro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="300dp"
        android:text="@string/brocast_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegister" />

    <TextView
        android:id="@+id/textViewRegisterBro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bro_register_text"
        app:layout_constraintBottom_toTopOf="@+id/broNameRegisterEmotion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.bro.brocast.adapters.SlidingTabLayout
        android:id="@+id/sliding_tabs_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/vpPager_register" />

    <com.bro.brocast.adapters.BroViewPager
        android:id="@+id/vpPager_register"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">
    </com.bro.brocast.adapters.BroViewPager>

</androidx.constraintlayout.widget.ConstraintLayout>