<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout5"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brocast_search"
        app:layout_constraintBottom_toTopOf="@id/broNameBroSearch"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/broNameBroSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="TODO"
        android:hint="@string/broname_hint"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/buttonSearchBros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="150dp"
        android:layout_marginEnd="150dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp" />

    <EditText
        android:id="@+id/broNameSearchEmotion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="TODO"
        android:hint="@string/broname_emotion"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/broNameBroSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/broNameBroSearch"
        app:layout_constraintTop_toTopOf="@+id/broNameBroSearch" />

    <Button
        android:id="@+id/buttonSearchBros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="Search your Bro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ExpandableListView
        android:id="@+id/bro_list_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <include
        android:id="@+id/keyboard"
        layout="@layout/keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        />

</androidx.constraintlayout.widget.ConstraintLayout>